--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito+Sans:opsz,wght@6..12,700&display=swap');
+*{
+    box-sizing: border-box;
+}
+html{
+    font-size: 16px;
+}
+html,button{
+    font-family: "Quicksand","sand-serif";
+}
+body{
+    margin: 0;
+}
+a{
+    text-decoration: none;
+}
