starting search fucntionalty

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -23,7 +23,7 @@
                         {{food.cookTime}}
                     </div>
                     <div class="price">
-                        {{food.price}}
+                        {{food.price | currency}}
                     </div>
                 </div>
             </div>
